# barrett_hand_sim_dart

./: CMakeLists.txt  README.md  package.xml
meshes/: container_1d.stl  container_2d.stl  cuboid.stl  cyl_w_closed_handle.stl  cylinder4.stl  cylinder6.stl  cylinder9.stl  kettle15d.stl  plane.stl
objects/: container_1d.urdf  container_2d.urdf  cube.urdf  cylinder4.urdf  jar.urdf  jar2.urdf  kettle15d.urdf  mug.urdf  plane.urdf
scenes/: cyl.urdf.xacro  force.urdf.xacro  hook.urdf.xacro  pinch.urdf  pinch.urdf.xacro  sph.urdf.xacro  test_container_1.urdf.xacro  test_container_2.urdf.xacro  test_cuboid.urdf.xacro  test_cylinder4_lying.urdf.xacro  test_cylinder4_standing.urdf.xacro  test_jar.urdf.xacro  test_kettle.urdf.xacro  test_mug.urdf.xacro
scripts/: exp.sh  gen_models.sh  gen_om.sh  gen_qd.sh  statistics.py
src/: dart_experiments.cpp  dart_grasp.cpp  dart_grasp_model.cpp  dart_model.cpp  dart_test.cpp  generate_models.cpp  generate_object_model.cpp  generate_query_density.cpp  grasp_specification.cpp  grasp_specification.h  grasp_state.cpp  grasp_state.h  gripper_controller.cpp  gripper_controller.h  mesh_sampling.cpp  mesh_sampling.h  models.cpp  models.h  select_grasp.cpp  visual_debug.cpp  visual_debug.h
